added new image

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/images/Freddie.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/Freddie.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/Freddie.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/Fred Mercury.jpg">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/Fred Mercury.jpg">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/Fred Mercury.jpg">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="stylesheet" href="index.css">
     </head>
